// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Authorized /> renders children when check succeeds 1`] = `
<DocumentFragment>
  <div>
    fallback
  </div>
</DocumentFragment>
`;

exports[`<Authorized /> renders children when check succeeds 2`] = `
<DocumentFragment>
  <div>
    pkg:/path
  </div>
</DocumentFragment>
`;

exports[`<Authorized /> renders fallback when check does not succeed 1`] = `
<DocumentFragment>
  <div>
    fallback
  </div>
</DocumentFragment>
`;

exports[`<Authorized /> renders fallback when check does not succeed 2`] = `
<DocumentFragment>
  <div>
    fallback
  </div>
</DocumentFragment>
`;
